--- a/src/views/Planner/Planner.css
+++ b/src/views/Planner/Planner.css
@@ -1,10 +1,15 @@
 p.title {
     text-align: center;
 }
-form {
+
+div.wrapper {
     display: flex;
-    flex-direction: row;
 }
+
+h4 {
+    padding: 0 0 0 8px;
+}
+
 div p {
     margin: 10px;
 }
