--- a/src/components/WeekSummary/WeekSummary.css
+++ b/src/components/WeekSummary/WeekSummary.css
@@ -4,6 +4,7 @@ div.week-summary {
     border: 1px solid gray;
     border-radius: 5px;
     padding: 10px 0 10px 20px;
+    background-color: #fff;
 }
 
 div.week-summary:hover {
