--- a/src/components/WeekSummary/WeekSummary.css
+++ b/src/components/WeekSummary/WeekSummary.css
@@ -3,7 +3,7 @@ div.week-summary {
     font-size: .8em;
     border: 1px solid gray;
     border-radius: 5px;
-    padding: 10px 0 10px 20px;
+    padding: 10px 20px 10px 20px;
     background-color: #fff;
 }
 
@@ -15,7 +15,7 @@ div.week-summary:hover {
     /*border: 1px dotted grey;*/
 }
 table {
-    width: 300px;
+    width: 100%;
     border-collapse: collapse;
 }
 th {
