--- a/src/views/NewRecipe/NewRecipe.css
+++ b/src/views/NewRecipe/NewRecipe.css
@@ -30,3 +30,6 @@ input[type="button"] {
     margin: 10px 0 10px 370px;
 
 }
+input[type="button"]:hover, input[type="submit"]:hover {
+    cursor: pointer;
+}
