--- a/src/components/Confirm/Confirm.css
+++ b/src/components/Confirm/Confirm.css
@@ -4,9 +4,10 @@
     top: 35vh;
     width: 200px;
     text-align: center;
-    padding: 10px;
-    background-color: gray;
+    padding: 5px;
+    background-color: rgba(0, 0, 0, .5);
+    border-radius: 3px;
     color: white;
     font-size: 1.5em;
-    border: 2px solid black;
+    border: 1px solid black;
 }
